fixed mobile navbar overlapping sitenav

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
          margin-bottom: 15px;
          padding-top: 10px;
          flex: 1;
-         
+       
  }  
  
  .logo {height: 120px;
@@ -164,7 +164,8 @@ height: 100;}
 
 .group {display: flex;
         flex-direction: column;
-        align-items: center;}
+        align-items: center;
+        width: 400px;}
 
 .item {height: 200px;
        padding: auto; 
@@ -264,7 +265,7 @@ flex-direction: column;}
                 flex-wrap: nowrap;
                 flex-direction: row;
                 white-space: nowrap;
-                
+                padding-top: 2.2em;
                 padding-bottom: 1.2em;
              
                 background-color: white;
